fix add to playlist menu showing behind cards and multiple times

--- a/frontend/src/components/cards/SongCard.css
+++ b/frontend/src/components/cards/SongCard.css
@@ -1,7 +1,7 @@
 .SongCardBox {
   display: flex;
   align-items: center;
-  position: relative;
+  /* position: relative; */
   /* width: 30em; */
   /* padding-right: 2em; */
   /* margin-bottom: 1.5em; */
@@ -100,7 +100,7 @@
   position: relative;
   transform: translate(40px, -50px);
   padding: 2px;
-  z-index: 90 !important;
+  z-index: 99;
 }
 .Playlist-add > button {
   display: flex;
@@ -128,8 +128,51 @@
 .Playlist-add > button:hover {
   background-color: hsla(0, 0%, 100%, 0.3);
 }
+/* .IconBox {
+   display: inline-flex;
+   opacity: 0;
+   transition: all 0.3s ease;
+   box-shadow: 0 8px 8px rgb(0 0 0 / 30%);
+   z-index: 2;
+   border-radius: 500px;
+   position: absolute;
+   right: 16px;
+   top: calc(50% - 20px);
+ }
+ 
+ .IconBox div {
+   background-color: #1db954;
+   height: 40px;
+   width: 40px;
+ }
+ 
+ .IconBox button {
+   height: 40px;
+   width: 40px;
+   -webkit-transition: -webkit-transform 33ms cubic-bezier(0.3, 0, 0, 1);
+   transition: -webkit-transform 33ms cubic-bezier(0.3, 0, 0, 1);
+   transition: transform 33ms cubic-bezier(0.3, 0, 0, 1);
+   transition: transform 33ms cubic-bezier(0.3, 0, 0, 1),
+     -webkit-transform 33ms cubic-bezier(0.3, 0, 0, 1);
+ }
+ 
+ .ActiveIconBox {
+   opacity: 1;
+ }
+ 
+ .IconBox button svg {
+   fill: #fff !important;
+ }
+ 
+ .IconBox button:hover {
+   -webkit-transform: scale(1.06);
+   transform: scale(1.06);
+ } */
 .SongCard:hover {
   background: hsla(0, 0%, 100%, 0.2);
   -webkit-backdrop-filter: blur(60px);
   backdrop-filter: blur(60px);
 }
+/* .PlaylistCardSBox:hover .IconBox {
+   opacity: 1;
+ } */
